--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@
 body {
   background-color: var(--primary-background-color);
   font-family: var(--font-family);
-  height: 100vh;
+  padding: 20px;
 }
 
 h1,
@@ -16,7 +16,12 @@ h2 {
 }
 
 h1 {
-  margin: 20px px 0;
+  margin: 20px 0;
+  padding-top: 60px;
+}
+
+h2 {
+  margin-top: -15px;
 }
 
 a {
@@ -45,4 +50,13 @@ a:visited {
 
 .my-name {
   color: #fff;
+}
+
+.arrow {
+  position: relative;
+  bottom: 3px;
+}
+
+.work-link {
+  padding-top: 25px;
 }
