--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,16 @@
 :root {
   --primary-background-color: #7fa99b;
   --primary-text-color: #384a51;
-  --font-family: helvetica, sans-serif, arial;
+  --font-family: sans-serif;
 }
 
-body {
+.container-fluid {
+  padding: 0;
+}
+
+.header {
   background-color: var(--primary-background-color);
-  font-family: var(--font-family);
+  height: 500px;
 }
 
 h1,
@@ -16,6 +20,14 @@ h2 {
 
 h1 {
   padding-top: 60px;
+  padding-left: 65px;
+  font-size: 70px;
+}
+
+h2 {
+  font-size: 35px;
+  padding-left: 65px;
+  font-size: 50px;
 }
 
 a {
@@ -43,12 +55,9 @@ a:hover {
 }
 
 .work-link {
-  padding-top: 25px;
+  padding-top: 70px;
+  padding-left: 68px;
   color: var(--primary-text-color);
-}
-
-.my-name {
-  color: #fff;
 }
 
 .arrow {
