--- a/src/style.css
+++ b/src/style.css
@@ -4,10 +4,6 @@
   --font-family: sans-serif;
 }
 
-.container-fluid {
-  padding: 0;
-}
-
 .header {
   background-color: var(--primary-background-color);
   height: 500px;
@@ -19,13 +15,7 @@
 }
 
 .section img {
-  display: inline;
-  float: right;
   width: 300px;
-  border-radius: 20px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-  margin-top: -78px;
-  margin-right: 15px;
 }
 
 h1,
@@ -34,29 +24,25 @@ h3,
 h4 {
   color: var(--primary-text-color);
   font-weight: 600;
+  font-size: 50px;
 }
 
 h1 {
-  padding-top: 60px;
-  padding-left: 65px;
   font-size: 50px;
+  padding: 200px 0 0 100px;
+}
+
+.work-link {
+  padding: 20px 100px;
+  color: var(--primary-text-color);
 }
 
 h2 {
   font-size: 50px;
-  padding-left: 65px;
-  font-size: 50px;
-}
-
-h3 {
-  font-size: 50px;
-  padding-bottom: 30px;
-  color: var(--primary-text-color);
 }
 
 h4 {
   font-size: 30px;
-  margin-top: 50px;
 }
 
 .section p {
@@ -77,28 +63,12 @@ a:hover {
   color: #fff;
 }
 
-.taskbar {
-  display: flex;
-  justify-content: flex-end;
-  padding: 20px;
-}
-
 .taskbar-link {
   padding: 0px 15px 50px;
   color: #fff;
 }
 
-.work-link {
-  padding-top: 70px;
-  padding-left: 68px;
-  color: var(--primary-text-color);
-}
-
 .arrow {
   position: relative;
   bottom: 3px;
-}
-
-.section button {
-  padding-left: 0;
 }
