--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,10 @@ h1 {
   font-size: 50px;
 }
 
+.my-name {
+  color: #fff;
+}
+
 .work-link {
   padding-top: 50px;
   color: var(--primary-text-color);
@@ -53,4 +57,10 @@ h4 {
 .arrow {
   position: relative;
   bottom: 3px;
+}
+
+@media (max-width: 600px) {
+  h1 {
+    font-size: 40px;
+  }
 }
