--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,34 @@
   --font-family: sans-serif;
 }
 
+h1,
+h2,
+h4 {
+  color: var(--primary-text-color);
+  font-weight: 600;
+  font-size: 50px;
+}
+
+h1 {
+  padding-top: 200px;
+  font-size: 50px;
+}
+
+h3 {
+  font-size: 35px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: var(--primary-text-color);
+}
+
+h2 {
+  font-size: 50px;
+}
+
+h4 {
+  font-size: 30px;
+}
+
 .header {
   background-color: var(--primary-background-color);
   height: 500px;
@@ -16,22 +44,11 @@
 }
 
 .section img {
-  display: flex;
-  width: 300px;
-}
-
-h1,
-h2,
-h3,
-h4 {
-  color: var(--primary-text-color);
-  font-weight: 600;
-  font-size: 50px;
-}
-
-h1 {
-  padding-top: 200px;
-  font-size: 50px;
+  position: relative;
+  bottom: 62px;
+  left: 20px;
+  width: 325px;
+  height: 450px;
 }
 
 .my-name {
@@ -43,14 +60,6 @@ h1 {
   color: var(--primary-text-color);
 }
 
-h2 {
-  font-size: 50px;
-}
-
-h4 {
-  font-size: 30px;
-}
-
 .section p {
   color: var(--primary-text-color);
 }
@@ -60,8 +69,37 @@ h4 {
   bottom: 3px;
 }
 
+.projects {
+  background-color: var(--primary-background-color);
+  height: 500px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+
+.nav-gradient {
+  background: radial-gradient(
+    circle at 18.7% 37.8%,
+    rgba(250, 250, 250, 0.2) 0%,
+    rgba(225, 234, 238, 0.5) 90%
+  );
+  font-size: 20px;
+  font-family: sans-serif;
+  color: #fff;
+}
+
+.skills {
+  font-size: 50px;
+  color: var(--primary-background-color);
+}
+
 @media (max-width: 768px) {
   h1 {
     font-size: 40px;
+  }
+  h2,
+  h3 {
+    margin: 0;
+  }
+  .section p {
+    margin-bottom: 20px;
   }
 }
