--- a/src/style.css
+++ b/src/style.css
@@ -76,14 +76,12 @@ h4 {
 }
 
 .nav-gradient {
-  background: radial-gradient(
-    circle at 18.7% 37.8%,
-    rgba(250, 250, 250, 0.2) 0%,
-    rgba(225, 234, 238, 0.5) 90%
-  );
+  background: transparent;
   font-size: 20px;
   font-family: sans-serif;
   color: #fff;
+  z-index: 1;
+  backdrop-filter: blur(2px);
 }
 
 .skills {
