--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Wix+Madefor+Text:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@0;1&family=Wix+Madefor+Text:wght@500&display=swap");
+
 :root {
   --primary-background-color: #7fa99b;
   --primary-text-color: #384a51;
-  --font-family: sans-serif;
+  --font-family: "Libre Baskerville", Georgia;
 }
 
 h1,
 h2,
 h4 {
   color: var(--primary-text-color);
-  font-weight: 600;
   font-size: 50px;
 }
 
 h1 {
   padding-top: 200px;
+  font-size: 50px;
+  font-family: var(--font-family);
+}
+
+h2 {
   font-size: 50px;
 }
 
@@ -22,10 +29,6 @@ h3 {
   padding-top: 20px;
   padding-bottom: 20px;
   color: var(--primary-text-color);
-}
-
-h2 {
-  font-size: 50px;
 }
 
 h4 {
@@ -39,6 +42,7 @@ h4 {
 }
 
 .header a {
+  font-family: var(--font-family);
   color: var(--primary-text-color);
   text-decoration: none;
 }
@@ -76,11 +80,9 @@ h4 {
 }
 
 .nav-gradient {
-  background: transparent;
   font-size: 20px;
   font-family: sans-serif;
   color: #fff;
-  backdrop-filter: blur(5px);
 }
 
 .skills {
