--- a/src/style.css
+++ b/src/style.css
@@ -92,6 +92,21 @@ h3 {
   color: var(--primary-background-color);
 }
 
+.button-colour {
+  background-color: var(--primary-background-color) !important;
+ border: none;
+}
+
+.footer {
+  background-color: #fff;
+  height: 25px;
+}
+
+.font-links {
+  font-size: 20px;
+  color: var(--primary-background-color);
+}
+
 @media (max-width: 768px) {
   h1 {
     font-size: 40px;
@@ -99,7 +114,7 @@ h3 {
   h2,
   h3 {
     margin: 0;
-    font-size: 30px;
+    font-size: 50px;
   }
   h3 {
     padding-top: 0;
