--- a/src/style.css
+++ b/src/style.css
@@ -34,8 +34,8 @@ h3 {
 
 h4 {
   font-family: var(--font-family);
-  color: var(--primary-text-color);
-  font-size: 35px;
+  color: #fff;
+  font-size: 40px;
 }
 
 .header {
